--- a/src/components/designUtils/_colors.scss
+++ b/src/components/designUtils/_colors.scss
@@ -7,3 +7,5 @@ $border-color: #dadada;
 $background-green: #006724;
 $icon-color: #FFFFFF;
 $button-color: #BE831D;
+$text-color: #000000;
+$background-dim: rgba(0,0,0,0.25);
