--- a/src/components/sideBar/SideBar.scss
+++ b/src/components/sideBar/SideBar.scss
@@ -1,76 +1,96 @@
 @import '../designUtils/_colors.scss';
 
-.sidebar {
+.navbar {
     background-color: $background-green;
-    height: 100px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
     color: $icon-color;
+    display:flex;
+    height: 100px;
+    width: 100%;
+    justify-content: left;
+    align-items: center;
+    font-size: 20px;
 
-
-    &__menu-bars {
+    &__icon  {
         margin-left: 2rem;
-        font-size: 2rem;
+        margin-right: 1rem;
+        font-size:  3rem;
         background: none;
         color: $icon-color;
+        position: relative;
+        top: 5px;
     
-    }
-    &__title {    
-        margin-left: 20px;
-    }
-
-    &__nav-text {
-        display:flex;
-        justify-content: start;
-        align-items: center;
-        padding: 8px 0px 8px 16px;
-        list-style: none;
-        height: 60px;
-    }
-
-    &__nav-text a {
-        text-decoration: none;
-        color: #000000;
-        font-size: 18px;
-        width: 95%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        padding: 0 16px;
-        border-radius: 4px;
-        border-bottom: 2px solid $border-color;
-    }
-    
-    &__nav-text a:hover {
-        background-color: green;
-    }
-    
-    &__nav-menu-items {
-        width: 100%;
-    }
-    
-    &__toggle {
-        background-color: $icon-color;
-        width: 100%;
-        height: 50px;
-        display: flex;
-        justify-content: start;
-        align-items: center;
-
-        a {
-            font-size: 2em;
-        }
-    }
-    
-    &__label {
-        margin-left: 16px;
     }
 }
 
 
 
+.nav-menu {
+    background-color: $icon-color;
+    width: 60%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    transition: 650ms;
 
 
+    &__text {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        padding: 8px 0px 8px 16px;
+        color: $text-color;
+        list-style: none;
+        height: 60px;
+    }
+    
+    &__text a {
+        text-decoration: none;
+        color: $text-color;
+        font-size: 18px;
+        width: 95%;
+        height: 100%;
+        display: flex; 
+        justify-content: left;
+        align-items: center;
+        padding: 0 16px;
+        border-radius: 4px;
+        border-bottom: 1px solid #dadada
+    }
+    
+    &__text a:hover {
+        background-color: $background-green;
+    }
+    
+    &__items {
+        width: 100%;
+    }
+    
+    &__header {
+        background-color: $icon-color;
+        width: 100%;
+        height: 40px;
+        display: flex;
+        justify-content: right;
+        align-items: center;
+        padding: 3px 0;
 
+        a {
+            margin-right: 10px;
+        }
+    }
+
+    
+    
+    span {
+        margin-left: 16px;
+    }
+}
+
+.nav-menu.active {
+    left: 0;
+    transition: 350ms;
+}
 
